Fixed tab panel buttons scrollbar bug.

--- a/src/popup/style/_tab_panel.less
+++ b/src/popup/style/_tab_panel.less
@@ -11,6 +11,9 @@
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
+        // WARNING: Some flexbox bug with border-top at child.
+        // A scrollbar appears.
+        overflow-y: hidden;
         width: 100%;
 
         .tabPanelButton {
